# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/input/PinUpdateInputDto.kt
@@ -1,7 +1,9 @@
 package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.input
 
+import jakarta.validation.Valid
 import jakarta.validation.constraints.NotBlank
 import jakarta.validation.constraints.Size
+import java.time.Instant
 import java.util.UUID
 
 /**
@@ -14,4 +16,7 @@ data class PinUpdateInputDto(
     @field:Size(max = 2000) val description: String,
     val tags: List<@NotBlank String>,
     val boardIds: List<UUID>,
+    @field:Valid val publisher: PersonInputDto?,
+    @field:Size(max = 100) val creators: List<@Valid PersonInputDto>,
+    val publishedAt: Instant?,
 )
