# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/output/PersonOutputDto.kt
@@ -1,0 +1,3 @@
+package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output
+
+data class PersonOutputDto(val name: String, val urls: List<String>)
